<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.fred.sn4.SensorActivity">

    <TextView
        android:id="@+id/A"
        android:text="@string/Accel_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ax"
        android:text="@string/X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/A"
        app:layout_constraintLeft_toRightOf="@+id/A"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/Ay"
        android:text="@string/Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/A"
        app:layout_constraintLeft_toRightOf="@+id/Ax"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/Az"
        android:text="@string/Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/A"
        app:layout_constraintLeft_toRightOf="@+id/Ay"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/G"
        android:text="@string/Gyro_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/A" />

    <TextView
        android:id="@+id/Gx"
        android:text="@string/Phi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/G"
        app:layout_constraintLeft_toRightOf="@+id/A" />

    <TextView
        android:id="@+id/Gy"
        android:text="@string/Theta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/G"
        app:layout_constraintLeft_toRightOf="@+id/Gx" />

    <TextView
        android:id="@+id/Gz"
        android:text="@string/Psi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/G"
        app:layout_constraintLeft_toRightOf="@+id/Gy" />

    <TextView
        android:id="@+id/LA"
        android:text="@string/LA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/G" />

    <TextView
        android:id="@+id/LAx"
        android:text="@string/X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/LA"
        app:layout_constraintLeft_toRightOf="@+id/A" />

    <TextView
        android:id="@+id/LAy"
        android:text="@string/Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/LA"
        app:layout_constraintLeft_toRightOf="@+id/LAx" />

    <TextView
        android:id="@+id/LAz"
        android:text="@string/Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/LA"
        app:layout_constraintLeft_toRightOf="@+id/LAy" />

    <TextView
        android:id="@+id/Grav"
        android:text="@string/Gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LA" />

    <TextView
        android:id="@+id/Gravx"
        android:text="@string/X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Grav"
        app:layout_constraintLeft_toRightOf="@+id/A" />

    <TextView
        android:id="@+id/Gravy"
        android:text="@string/Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Grav"
        app:layout_constraintLeft_toRightOf="@+id/Gravx" />

    <TextView
        android:id="@+id/Gravz"
        android:text="@string/Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Grav"
        app:layout_constraintLeft_toRightOf="@+id/Gravy" />
    <TextView
        android:id="@+id/R"
        android:text="@string/Rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Grav" />

    <TextView
        android:id="@+id/Rx"
        android:text="@string/Phi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/R"
        app:layout_constraintLeft_toRightOf="@+id/A" />

    <TextView
        android:id="@+id/Ry"
        android:text="@string/Theta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/R"
        app:layout_constraintLeft_toRightOf="@+id/Rx" />

    <TextView
        android:id="@+id/Rz"
        android:text="@string/Psi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/R"
        app:layout_constraintLeft_toRightOf="@+id/Ry" />

    <TextView
        android:id="@+id/Rr"
        android:text="@string/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/R"
        app:layout_constraintLeft_toRightOf="@+id/Rz" />


</android.support.constraint.ConstraintLayout>
